--- a/about.html
+++ b/about.html
@@ -95,13 +95,13 @@
                               <a class="nav-link" href="#">Departments</a>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link" href="#">Facality</a>
+                              <a class="nav-link" href="facality.html">Facality</a>
                             </li>
                             <li class="nav-item">
                               <a class="nav-link" href="galery.html">Gallery</a>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link" href="#">Placement</a>
+                              <a class="nav-link" href="placement.html">Placement</a>
                             </li>
                             <li class="nav-item">
                               <a class="nav-link" href="#">Notice</a>
