--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                               <a class="nav-link" href="facality.html"><i class="fa-solid fa-users"></i> Facality</a>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link" href="galery.html"><i class="fas fa-camera"></i> Galery</a>
+                              <a class="nav-link" href="gallery.html"><i class="fas fa-camera"></i> Galery</a>
                             </li>
                             <li class="nav-item">
                               <a class="nav-link" href="placement.html"><i class="fa-sharp fa-solid fa-graduation-cap"></i> Placement</a>
