--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
 
-    <title>GWP/about</title>
+    <title>GWP</title>
     <link rel="stylesheet" type="text/css" href="style.css"/>
     <link rel="stylesheet" type="text/css" href="animate.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -89,25 +89,25 @@
                               <a class="nav-link" href="index.html"><i class="fa-solid fa-house-chimney"></i>Home <span class="sr-only">(current)</span></a>
                             </li>
                             <li class="nav-item active">
-                              <a class="nav-link" href="about.html">About</a>
+                              <a class="nav-link" href="about.html"><i class="fa-solid fa-building"></i> About</a>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link" href="#">Departments</a>
+                              <a class="nav-link" href="#"><i class="fa-solid fa-users"></i> Departments</a>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link" href="facality.html">Facality</a>
+                              <a class="nav-link" href="facality.html"><i class="fa-solid fa-users"></i> Facality</a>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link" href="galery.html">Gallery</a>
+                              <a class="nav-link" href="galery.html"><i class="fas fa-camera"></i> Gallery</a>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link" href="placement.html">Placement</a>
+                              <a class="nav-link" href="placement.html"><i class="fa-sharp fa-solid fa-graduation-cap"></i> Placement</a>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link" href="#">Notice</a>
+                              <a class="nav-link" href="notice.html"><i class="fa-solid fa-file-pdf"></i> Notice</a>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link" href="contact-us.html">Contact</a>
+                              <a class="nav-link" href="contact-us.html"><i class="fa-solid fa-address-book"></i> Contact</a>
                             </li>
                           </ul>
                         </div>
