--- a/gallery.html
+++ b/gallery.html
@@ -19,61 +19,6 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
   <style type="text/css">
-    .heading-placement {
-      box-shadow: 5px 15px 30px rgba(0, 0, 0, 0.3), 5px 11px 8px rgba(0, 0, 0, 0.22);
-      width: 100%;
-      box-sizing: border-box;
-      border-bottom: 4px solid rgb(7, 146, 128);
-      text-align: center;
-      border-top: 1px solid rgba(0, 0, 0, 0.3);
-      border-left: 1px solid rgba(0, 0, 0, 0.3);
-      border-right: 1px solid rgba(0, 0, 0, 0.3);
-      border-radius: 10px;
-    }
-
-    .container .recruiters ul {
-      list-style: none;
-      list-style-position: outside;
-      margin-top: 20px;
-    }
-
-    .amu {
-      padding: 0 10px;
-      font-weight: 700;
-      font-size: 15px;
-      margin-top: 20px;
-    }
-
-    .placement p {
-      margin-top: 20px;
-    }
-
-    .placement h3,
-    .placement h5 {
-      margin-top: 50px;
-    }
-
-    .img-fluid {
-      max-width: 100%;
-      height: auto;
-      margin-top: 40px;
-      margin-bottom: 20px;
-      margin-left: 40px;
-    }
-
-    .placement-cell p {
-      padding-left: 60px;
-      padding-top: 20px;
-      font-weight: 500;
-      text-align: justify;
-    }
-
-    .placement-cell ul {
-      list-style: none;
-      padding-top: 20px;
-      padding-left: 50px;
-    }
-
     .placement-image {
       margin: 0;
       padding: 0;
@@ -165,8 +110,86 @@
       object-fit: cover;
     }
 
+    .container .popup-image video {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      border: 5px solid #fff;
+      border-radius: 5px;
+      width: 750px;
+      object-fit: cover;
+    }
+
     @media (max-widh:768px) {
       .container .popup-image img {
+        width: 95%;
+      }
+    }
+
+    .container .video-container {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 15px;
+      justify-content: center;
+      padding: 10px;
+    }
+
+    .container .video-container .video {
+      height: 250px;
+      width: 350px;
+      border: 10px solid #fff;
+      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+      overflow: hidden;
+      cursor: pointer;
+    }
+
+    .container .video-container .video video {
+      height: 100%;
+      width: 100%;
+      object-fit: cover;
+      transform: .2s linear;
+    }
+
+    .container .video-container .video:hover video {
+      transform: scale(1.1);
+    }
+
+    .container .popup-video {
+      position: fixed;
+      top: 0;
+      left: 0;
+      background: rgba(0, 0, 0, .8);
+      height: 100%;
+      width: 100%;
+      z-index: 100;
+      display: none;
+    }
+
+    .container .popup-video video {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      border: 3px solid #fff;
+      border-radius: 5px;
+      width: 750px;
+      object-fit: cover;
+    }
+
+    .container .popup-video span {
+      position: absolute;
+      top: 5px;
+      right: 20px;
+      font-size: 50px;
+      color: #fff;
+      font-weight: bolder;
+      z-index: 100;
+      cursor: pointer;
+    }
+
+    @media (max-widh:768px) {
+      .container .popup-video video {
         width: 95%;
       }
     }
@@ -215,21 +238,21 @@
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                  <a class="nav-link" href="index.html"><i class="fa-solid fa-house-chimney"></i>Home <span
+                <li class="nav-item">
+                  <a class="nav-link" href="index.html"><i class="fa-solid fa-house-chimney"></i> Home <span
                       class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item active">
+                <li class="nav-item">
                   <a class="nav-link" href="about.html"><i class="fa-solid fa-building"></i> About</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#"><i class="fa-solid fa-users"></i> Departments</a>
+                  <a class="nav-link" href="#"><i class="fa-solid fa-users"></i> DEPARTMENTS</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="facality.html"><i class="fa-solid fa-users"></i> Facality</a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="gallery.html"><i class="fas fa-camera"></i> Gallery</a>
+                <li class="nav-item active">
+                  <a class="nav-link" href="galery.html"><i class="fas fa-camera"></i> Galery</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="placement.html"><i class="fa-sharp fa-solid fa-graduation-cap"></i>
@@ -248,120 +271,93 @@
       </div>
     </div>
   </section>
-
-  <section class="placement">
-    <div class="container">
-      <div class="heading-placement">
-        <h1>PLACEMENTS IN GWP-JAMSHEDPUR</h1>
-      </div>
-      <div class="row">
-        <div class="col-5">
-          <h3>Training and Placement Office:</h3>
-          <p>Government Women's Polytechnic Jamshedpur<br /><br />
-
-            <b>Mr. Subodh Kumar</b>, Training and Placement Officer<br /><br />
-
-            Contact : +91 8935891764, gwpjamshedpur@gmail.com
-          </p>
-        </div>
-        <div class="col-4 recruiters">
-          <h5>Our Recruiters for 2021-2022</h5>
-          <ul>
-            <li> &#10144; TATA Steel</li>
-            <li> &#10144; TATA Power</li>
-            <li> &#10144; TATA Electronics</li>
-            <li> &#10144; Larsen & Toubro : L&T</li>
-            <li> &#10144; Joyson Safety</li>
-            <li> &#10144; RFKL Ramkrishna Forgings Limited (JSR)</li>
-            <li> &#10144; Anand Group, Pune</li>
-            <li> &#10144; Dana TM4 India Pvt. Ltd.</li>
-            <li> &#10144; Vadyar Service Pvt. Ltd</li>
-          </ul>
-        </div>
-        <div class="col-3">
-          <h5>Our Training Partner</h5>
-          <div class="amu">
-            <a href="#">AMU : IDTR, Govt. Of Jharkhand, Jamshedpur.</a><br /><br />
-            <a href="#">AMU : Auto Cluster, Adityapur</a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <div class="col-md-12">
-    <img src="./image/1  (1).gif" class="img-fluid">
-  </div>
-  <section class="placement-cell">
-    <h4 style="margin: 0 50px;">Training and Placement Cell:
-    </h4>
-    <p>With the changing educational trends, versatility in educational courses, availability of masses of qualified
-      personnel, the competition for job acquisition and job sustainability is becoming more and tougher. To get an edge
-      over the competitors, students are left with no choice but to add values to their hard skills with soft skills to
-      exhibit their true potential.</p>
-    <h5 style="margin: 0 50px;">Hard skills:</h5>
-    <p>Hard skills are academic skills, experience and level of expertise while soft skills are self-developed,
-      interactive, communication, human and transferable skills. Most employers these days want to hire, retain and
-      promote persons who are dependable, resourceful, ethical and self directed, having effective communication,
-      willing to work and learn and having positive attitude.
-    <h5 style="margin: 0 50px;">Soft skills:</h5>
-    <p>Soft skills is a sociological term relating to a person's Emotional intelligence quotient (EQ),the cluster of
-      personality traits, social graces, communication, language, personal habits, friendliness, and optimism that
-      characterize relationships with other people. Soft skills are often described by using terms often associated with
-      personality traits, such as: optimism, common sense, responsibility, a sense of humor, integrity and abilities
-      that can be practiced (but require the individual to genuinely like other people) such as: empathy, teamwork,
-      leadership, communication.
-    </p>
-    <h6 style="margin: 0 50px;">Importance of Soft skills:</h6>
-    <p>With the onset of economic liberalization, the Indian market is also becoming global, so the attributes of soft
-      skills are to be imbibed by Indian youth to show their real potential at intra and international levels.
-      Understanding the importance of this newly raised important aspect, Training and Placement cell of GWP Jamshedpur
-      have initiated programs, and activities for developing soft skills in the students.
-    </p>
-    <h5 style="margin: 0 50px;">Objectives of the Placement cell:</h5>
-    <p>Training and Placement cell of GWP Jamshedpur is a section within Student Support and Guidance, which specializes
-      in helping students to develop their skills and get the job opportunities. Training & Placement cell is formed for
-      the Institute. The Placement Cell has been assisting the students in paving a way to their career. All the
-      departments create an environment for the students which encourage them to make their career and social
-      development that readies students for successful entry into the society. Various activities involving students are
-      undertaken throughout the year, like inviting eminent personalities in different field to deliver talk which
-      enhance student’s knowledge. Seminars are arranged where students are given topics related to syllabus to speak,
-      which build up confidence among the students,. T&P Cell encourages the students to participate in seminars,
-      workshops, conferences, debates etc. to exhibit their research potential. The Placement cell provides information
-      regarding higher education in India and abroad, job opportunities and the requirement received from the industrial
-      sector is generally circulated and displayed on notice board for the information of students or communicated by
-      e-mail . Students have been placed in various companies, organizations, industries and colleges. It also extends
-      its services by offering various trainings to the students on personality development and career development
-      skills, etc. The database of the students is managed by the cell which plays a critical role in getting jobs.
-      Placement cell co-ordinates different activities.
-    </p>
-    <h5 style="margin: 0 50px;">Activities:</h5>
-    <ul>
-      <li> ◆ Approaching industry for campus interview.</li>
-      <li> ◆ Organizing expert lectures on various topics.</li>
-      <li> ◆ Organizing industrial visits for student.</li>
-      <li> ◆ Organizing soft skill sessions to improve the soft skills of student.</li>
-      <li> ◆ Organizing seminars and workshops to improve the professional skill of students.</li>
-      <li> ◆ Organizing aptitude tests to improve their competence.</li>
-      <li> ◆ Conducing campus placement drives.</li>
-      <li> ◆ To act as link between students, recruiters and entrepreneurs.</li>
-      <li> ◆ To nurture employability skills in the students.</li>
-      <li> ◆ To provide students information about the recruitments and recruiters.</li>
-      <li> ◆ To send data of eligible students to recruiters and invite them for recruitment.</li>
-      <li> ◆ To motivate students for entrepreneurship.</li>
-    </ul>
-  </section>
   <section class="placement-image">
     <div class="container">
       <h1>Placement [2022]</h1>
       <div class="image-container">
-        <div class="image"><img class="power" src="./image/1  (64).jpg" alt=""></div>
-        <div class="image"><img class="power" src="./image/1  (65).jpg" alt=""></div>
-        <div class="image"><img src="./image/1  (66).jpg" alt=""></div>
+        <div class="image"><img class="power" src="1  (64).jpg" alt=""></div>
+        <div class="image"><img class="power" src="1  (65).jpg" alt=""></div>
+        <div class="image"><img src="1  (66).jpg" alt=""></div>
+      </div>
+      <h1>Group Disscussion</h1>
+      <div class="image-container">
+        <div class="image"><img src="1  (1).jpg" alt=""></div>
+        <div class="image"><img src="1  (2).jpg" alt=""></div>
+        <div class="image"><img src="1  (3).jpg" alt=""></div>
+        <div class="image"><img src="1  (4).jpg" alt=""></div>
+        <div class="image"><img src="1  (5).jpg" alt=""></div>
+        <div class="image"><img src="1  (6).jpg" alt=""></div>
+        <div class="image"><img src="1  (7).jpg" alt=""></div>
+        <div class="image"><img src="1  (8).jpg" alt=""></div>
+        <div class="image"><img src="1  (9).jpg" alt=""></div>
+        <div class="image"><img src="1  (10).jpg" alt=""></div>
+        <div class="image"><img src="1  (11).jpg" alt=""></div>
+        <div class="image"><img src="1  (12).jpg" alt=""></div>
+        <div class="image"><img src="1  (13).jpg" alt=""></div>
+        <div class="image"><img src="1  (14).jpg" alt=""></div>
+        <div class="image"><img src="1  (16).jpg" alt=""></div>
+        <div class="image"><img src="1  (17).jpg" alt=""></div>
+        <div class="image"><img src="1  (18).jpg" alt=""></div>
+        <div class="image"><img src="1  (6).jpg" alt=""></div>
+      </div>
+      <h1>YOGA</h1>
+      <div class="image-container">
+        <div class="image"><img src="yoga (1).jpg" alt=""></div>
+        <div class="image"><img src="yoga (4).jpg" alt=""></div>
+        <div class="image"><img src="yoga (3).jpg" alt=""></div>
+        <div class="image"><img src="yoga (5).jpg" alt=""></div>
+        <div class="image"><img src="yoga (7).jpg" alt=""></div>
+        <div class="image"><img src="yoga (8).jpg" alt=""></div>
+        <div class="image"><img src="yoga (9).jpg" alt=""></div>
+        <div class="image"><img src="yoga (10).jpg" alt=""></div>
+        <div class="image"><img src="yoga (11).jpg" alt=""></div>
+        <div class="image"><img src="yoga (12).jpg" alt=""></div>
+        <div class="image"><img src="yoga (13).jpg" alt=""></div>
+        <div class="image"><img src="yoga (17).jpg" alt=""></div>
+        <div class="image"><img src="yoga (18).jpg" alt=""></div>
+        <div class="image"><img src="yoga (19).jpg" alt=""></div>
+        <div class="image"><img src="yoga (20).jpg" alt=""></div>
+      </div>
+      <h1>HINDI DIVAS</h1>
+      <div class="image-container">
+        <div class="image"><img src="hindi-divas (1).jpg" alt=""></div>
+        <div class="image"><img src="hindi-divas (2).jpg" alt=""></div>
+        <div class="image"><img src="hindi-divas (3).jpg" alt=""></div>
+        <div class="image"><img src="hindi-divas (4).jpg" alt=""></div>
+        <div class="image"><img src="hindi-divas (5).jpg" alt=""></div>
+        <div class="image"><img src="1  (45).jpg" alt=""></div>
+        <div class="image"><img src="1  (46).jpg" alt=""></div>
+        <div class="image"><img src="1  (47).jpg" alt=""></div>
+        <div class="image"><img src="1  (48).jpg" alt=""></div>
+        <div class="image"><img src="1  (49).jpg" alt=""></div>
+        <div class="image"><img src="1  (50).jpg" alt=""></div>
+        <div class="image"><img src="1  (51).jpg" alt=""></div>
+        <div class="image"><img src="1  (52).jpg" alt=""></div>
+        <div class="image"><img src="1  (53).jpg" alt=""></div>
+        <div class="image"><img src="1  (54).jpg" alt=""></div>
+      </div>
+      <h1>VIDEOS</h1>
+      <div class="video-container">
+        <div class="video"><video controls src="video (1).mp4"></video>></div>
+        <div class="video"><video controls src="video (2).mp4"></video>></div>
+        <div class="vide"><video controls src="video (3).mp4"></video>></div>
+        <div class="vide"><video controls src="1  (1).mp4"></video>></div>
+        <div class="vide"><video controls src="1  (2).mp4"></video>></div>
+        <div class="vide"><video controls src="1  (3).mp4"></video>></div>
+        <div class="vide"><video controls src="1  (4).mp4"></video>></div>
+        <div class="vide"><video controls src="1  (5).mp4"></video>></div>
+        <div class="vide"><video controls src="1  (8).mp4"></video>></div>
+        <div class="vide"><video controls src="1  (9).mp4"></video>></div>
       </div>
       <div class="popup-image">
         <span>&times;</span>
-        <img src="./image/1  (64).jpg" alt="">
+        <img src="1  (64).jpg" alt="">
       </div>
+      <div class="popup-video">
+        <span>&times;</span>
+        <video controls src="video (1).mp4"></video>
+      </div>
+    </div>
     </div>
   </section>
   <section id="footer">
@@ -451,9 +447,20 @@
         document.querySelector('.popup-image').style.display = 'block';
         document.querySelector('.popup-image img').src = image.getAttribute('src');
       }
-    })
+    });
     document.querySelector('.popup-image span').onclick = () => {
       document.querySelector('.popup-image').style.display = 'none';
+    }
+  </script>
+  <script>
+    document.querySelectorAll('.video-container video').forEach(vid => {
+      vid.onclick = () => {
+        document.querySelector('.popup-video').style.display = 'block';
+        document.querySelector('.popup-video video').src = vid.getAttribute('src');
+      }
+    });
+    document.querySelector('.popup-video span').onclick = () => {
+      document.querySelector('.popup-video').style.display = 'none';
     }
   </script>
   <script src="wow.min.js"></script>
