--- a/facality.html
+++ b/facality.html
@@ -244,7 +244,7 @@
             <div class="col-md-12">
                 <h4>Computer Science Engineering</h4>
                 <div class="box">
-                    <div class="cardd cscard">
+                    <div class="cardd">
                         <img src="joycymam.jpg" alt="">
                         <p><b>Ms Joyci Nanci Hinz </b><br/>PTL</p>
                     </div>
