--- a/index.html
+++ b/index.html
@@ -314,8 +314,8 @@
                 </div>
             </div>
         </div>
-        <div class="btn">
-          <button><span>VIEW All</span></button>
+        <div class="btn1">
+          <button><a href="gallery.html"><span>VIEW All</span></a></button>
         </div>
     </div>
 </section>
@@ -324,7 +324,7 @@
   <div class="container">
       <div class="row text-center text-xs-center text-sm-left text-md-left">
           <div class="col-xs-12 col-sm-4 col-md-4">
-              <h5>| Quick links</h5>
+              <h5>  &nbsp; Quick links</h5>
               <ul class="list-unstyled quick-links">
                   <li><a href="index.html"><i class="fa fa-angle-double-right"></i>Home</a></li>
                   <li><a href="about.html"><i class="fa fa-angle-double-right"></i>About</a></li>
@@ -334,7 +334,7 @@
               </ul>
           </div>
           <div class="col-xs-12 col-sm-4 col-md-4">
-              <h5>    <b>|</b> Important Links</h5>
+              <h5> &nbsp; Important Links</h5>
               <ul class="list-unstyled quick-links">
                   <li><a href="https://www.jharkhand.gov.in/"><i class="fa fa-angle-double-right"></i>Govt. of Jharkhand</a></li>
                   <li><a href="https://jutranchi.ac.in/?page_id=221"><i class="fa fa-angle-double-right"></i>JUT SYLLABUS</a></li>
