--- a/index.html
+++ b/index.html
@@ -345,8 +345,10 @@
               </ul>
           </div>
           <div class="col-xs-12 col-sm-4 col-md-4">
-             <div>
-
+             <div class="map-box">
+              <div class="map-card">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14709.260601901009!2d86.081805!3d22.827827!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xf5311d7156b30d21!2sGovt.%20Women&#39;s%20Polytechnic%2C%20Jamshedpur!5e0!3m2!1sen!2sin!4v1671839258765!5m2!1sen!2sin" width="100%" height="150%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              </div>
              </div>
           </div>
       </div>
