--- a/facality.html
+++ b/facality.html
@@ -129,10 +129,10 @@
                               <a class="nav-link" href="index.html"><i class="fa-solid fa-house-chimney"></i> Home <span class="sr-only">(current)</span></a>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link" href="about.html"><i class="fa-solid fa-building"></i> About</a>
+                              <a class="nav-link" href="about.html"><i class="fa-solid fa-address-card"></i> About</a>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link" href="#"><i class="fa-solid fa-users"></i> DEPARTMENTS</a>
+                              <a class="nav-link" href="department.html"><i class="fa-solid fa-building"></i>  DEPARTMENTS</a>
                             </li>
                             <li class="nav-item active">
                               <a class="nav-link" href="facality.html"><i class="fa-solid fa-users"></i> Facality</a>
@@ -244,7 +244,7 @@
             <div class="col-md-12">
                 <h4>Computer Science Engineering</h4>
                 <div class="box">
-                    <div class="cardd">
+                    <div class="cardd cscard">
                         <img src="joycymam.jpg" alt="">
                         <p><b>Ms Joyci Nanci Hinz </b><br/>PTL</p>
                     </div>
