--- a/gallery.html
+++ b/gallery.html
@@ -246,7 +246,7 @@
                   <a class="nav-link" href="about.html"><i class="fa-solid fa-building"></i> About</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#"><i class="fa-solid fa-users"></i> DEPARTMENTS</a>
+                  <a class="nav-link" href="department.html"><i class="fa-solid fa-users"></i> DEPARTMENTS</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="facality.html"><i class="fa-solid fa-users"></i> Facality</a>
