--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                           <ul class="navbar-nav mr-auto">
                             <li class="nav-item active">
-                              <a class="nav-link" href="index.html"><i class="fa-solid fa-house-chimney"></i>  Home <span class="sr-only">(current)</span></a>
+                              <a class="nav-link" href="index.html"><i class="fa-solid fa-house-chimney"></i> Home <span class="sr-only">(current)</span></a>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link" href="about.html"><i class="fa-solid fa-building"></i> About</a>
+                              <a class="nav-link" href="about.html"><i class="fa-solid fa-building"></i>  About</a>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link" href="#"><i class="fa-solid fa-users"></i> DEPARTMENTS</a>
+                              <a class="nav-link" href="department.html"><i class="fa-solid fa-users"></i> DEPARTMENTS</a>
                             </li>
                             <li class="nav-item">
                               <a class="nav-link" href="facality.html"><i class="fa-solid fa-users"></i> Facality</a>
@@ -315,7 +315,7 @@
             </div>
         </div>
         <div class="btn1">
-          <button><a href="gallery.html"><span>VIEW All</span></a></button>
+          <button><a href="gallery.html" target="_blank"><span>VIEW All</span></a></button>
         </div>
     </div>
 </section>
