--- a/department.html
+++ b/department.html
@@ -110,7 +110,7 @@
     </div>
     <div class="container-fluid text">
         <div class="row">
-            <div class="col-md-9 col-sm-9 machanical">
+            <div class="col-md-9 col-xs-12 machanical">
                 <h4>Vision :</h4>
                 <p>We strive for producing Mechanical Engineering professionals having sound technical knowledge with innovative approach, who are competent to pursue diverse and successful careers in modern society. Through excellence in teaching, improvement in quality of life and fulfillment of social needs.</p>             
                 <h4>Mission :</h4> 
@@ -127,7 +127,7 @@
                     <li>To prepare professionally competent and broadly educated Mechanical Engineers by developing their analytical abilities, encouraging culture of continuous learning and by adopting new technologies to solve complex problems.</li>
                 </ol>
             </div> 
-            <div class="col-sm-3 col-md-3 machanical">
+            <div class="col-sm-12 col-md-3 machanical">
                 <div class="box">
                     <div class="cardd white">
                         <h3><strong>Departments</strong></h3>
@@ -139,9 +139,6 @@
             </div> 
         </div>
     </div>
-
-
-
     <!-- footer starts -->
 <section id="footer">
     <div class="container">
