--- a/department.html
+++ b/department.html
@@ -89,7 +89,7 @@
         </div>
     </section> 
     <!-- end menuarea -->
-    <div class="container-fuild department">
+    <div class="container department">
         <div class="row">
            <div class="col"> <h1>MACHANICAL DEPARTMENTS</h1></div>
         </div>
@@ -97,7 +97,7 @@
             <div class="col"><h5>Machanical Engineering </h5></div>
         </div>
     </div>
-    <div class="container-fluid">
+    <div class="container">
         <div class="row">
             <div class="col-md-12 machanical">
                 <div class="box">
@@ -108,7 +108,7 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid text">
+    <div class="container text">
         <div class="row">
             <div class="col-md-9 col-xs-12 machanical">
                 <h4>Vision :</h4>
