--- a/architech.html
+++ b/architech.html
@@ -91,10 +91,10 @@
     <!-- end menuarea -->
     <div class="container department">
         <div class="row">
-           <div class="col"> <h1>ELECTRONICS DEPARTMENT</h1></div>
+           <div class="col"> <h1>ARCHITECHTURE DEPARTMENT</h1></div>
         </div>
         <div class="row">
-            <div class="col"><h5>Electronics & Comm. Engineering </h5></div>
+            <div class="col"><h5>Architechture Assistanceship</h5></div>
         </div>
     </div>
     <div class="container">
@@ -102,7 +102,7 @@
             <div class="col-md-12 machanical">
                 <div class="box">
                     <div class="cardd">
-                        <img src="ece.jpg" alt="">
+                        <img src="arc.jpg" alt="">
                     </div>  
                 </div>
             </div>
@@ -112,37 +112,35 @@
         <div class="row">
             <div class="col-md-9 col-sm-9 machanical">
                 <h4>Vision :</h4>
-                <p>The vision of ECE department is to become pioneer in higher learning and research and to produce creative solution to societal needs.</p>             
+                <p>For the Department of Architecture at the <strong>JWP</strong> to be a pioneer in Jamshedpur and the region in teaching the principles and applications of architecture and urbanism and research to provide innovative solutions to solve the urban problems facing the local community, within an integrated methodology that achieves a balance between the needs of users, society and the environment.</p>             
                 <h4>Mission :</h4> 
                 <ul style="list-style: square;">
-                  <li>To provide excellence in education, research and public service.</li>
-                  <li>To provide quality education and to make the students entrepreneur and employable.</li>
-                  <li>Continuous upgradation of techniques for reaching heights of excellence in a global</li>
+                  <li> Educate students for an effective practice in architecture.</li>
+                  <li> Provide up-to-date architectural design skills and knowledge  for a wide variety of profession role in a private, public practice  and prepare the student for graduate study.</li>
+                  <li>Offer a curriculum comprised of a diverse and balanced set of courses and experiences</li>
+                  <li>Impart a variety of analytical and synthetic skills and knowledge in areas relevant to architecture: visual, and sensorial, and manual acuities, building construction technology, design, theory, history and criticism, human dynamic, planning, landscape and communication.</li>
                 </ul>
             </div> 
             <div class="col-sm-3 col-md-3 machanical">
-                <div class="box">
-                    <div class="cardd white">
-                        <h3><strong>Departments</strong></h3>
-                        <p class="p123"><a href="department.html">Machanical</a></p>
-                        <p class="p123"><a href="#">Electronics</a></p>
-                        <p class="p123"><a href="cs.html">Computer Science</a></p>
-                        <p class="p123"><a href="architech.html">Architechture</a></p>
-                        <div class="col-md-12 syllabus ">
-                          <h3><strong>Syllabus</strong></h3>
-                          <ul style="list-style: none;">
-                            <li><a href="1st-sem.pdf" target="_blank">1<sup>st</sup> &nbsp;&nbsp; Semester </a></li>
-                            <li><a href="2nd Sem Syllabus.pdf" target="_blank">2<sup>nd</sup> &nbsp; Semester </a></li>
-                            <li><a href="3rd sem ECE syllabus .pdf" target="_blank">3<sup>rd</sup> &nbsp; Semester </a></li>
-                          </ul>
-                        </div> 
-                    </div>
-                </div>  
-            </div>
+              <div class="box">
+                  <div class="cardd white">
+                      <h3><strong>Departments</strong></h3>
+                      <p class="p123"><a href="department.html">Machanical</a></p>
+                      <p class="p123"><a href="ece.html">Electronics</a></p>
+                      <p class="p123"><a href="cs.html">Computer Science</a></p>
+                      <p class="p123"><a href="#">Architechture</a></p>
+                      <!-- <div class="col-md-12 syllabus ">
+                        <h3><strong>Syllabus</strong></h3>
+                        <ul style="list-style: none;">
+                          <li><a href="1st-sem.pdf" target="_blank">1<sup>st</sup> &nbsp;&nbsp; Semester </a></li>
+                          <li><a href="2nd Sem Syllabus.pdf" target="_blank">2<sup>nd</sup> &nbsp; Semester </a></li>
+                          <li><a href="3rd sem ECE syllabus .pdf" target="_blank">3<sup>rd</sup> &nbsp; Semester </a></li>
+                        </ul>
+                      </div>  -->
+                  </div>
+              </div>  
+          </div> 
         </div>
-    </div>
-    <div id="container">
-      <button id="skew"><a href="https://en.wikipedia.org/wiki/Electronic_engineering">Read More</a></button>
     </div>
     <!-- footer starts -->
 <section id="footer">
