--- a/department.html
+++ b/department.html
@@ -132,7 +132,7 @@
                     <div class="cardd white">
                         <h3><strong>Departments</strong></h3>
                         <p class="p123"><a href="#">Machanical</a></p>
-                        <p class="p123"><a href="electronic.html">Electronics</a></p>
+                        <p class="p123"><a href="ece.html">Electronics</a></p>
                         <p class="p123"><a href="cs.html">Computer Science</a></p>
                         <p class="p123"><a href="architech.html">Architechture</a></p>
                     </div>  
