--- a/department.html
+++ b/department.html
@@ -89,7 +89,7 @@
         </div>
     </section> 
     <!-- end menuarea -->
-    <div class="container department">
+    <div class="container-fluid department">
         <div class="row">
            <div class="col"> <h1>MACHANICAL DEPARTMENTS</h1></div>
         </div>
@@ -97,7 +97,7 @@
             <div class="col"><h5>Machanical Engineering </h5></div>
         </div>
     </div>
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
             <div class="col-md-12 machanical">
                 <div class="box">
@@ -108,7 +108,7 @@
             </div>
         </div>
     </div>
-    <div class="container text">
+    <div class="container-fluid text">
         <div class="row">
             <div class="col-md-9 col-xs-12 machanical">
                 <h4>Vision :</h4>
@@ -141,7 +141,7 @@
     </div>
     <!-- footer starts -->
 <section id="footer">
-    <div class="container">
+    <div class="container-fluid">
         <div class="row text-center text-xs-center text-sm-left text-md-left">
             <div class="col-xs-12 col-sm-4 col-md-4">
                 <h5>  &nbsp; Quick links</h5>
