--- a/architech.html
+++ b/architech.html
@@ -163,7 +163,7 @@
                     <li><a href="https://jutranchi.ac.in/?page_id=221"><i class="fa fa-angle-double-right"></i>JUT SYLLABUS</a></li>
                     <li><a href="https://ekalyan.cgg.gov.in/"><i class="fa fa-angle-double-right"></i>E-KALYAN SCHOLARSHIP</a></li>
                     <li><a href="https://scholarships.gov.in/"><i class="fa fa-angle-double-right"></i>NATIONAL SCHOLARSHIP PORTAL</a></li>
-                    
+                     <li><a href="https://www.youth4work.com/onlinetalenttest"><i class="fa fa-angle-double-right"></i>Youth4Work</a></li>
                     
                 </ul>
             </div>
