--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                               <a class="nav-link" href="facality.html"><i class="fa-solid fa-users"></i> Facality</a>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link" href="gallery.html"><i class="fas fa-camera"></i> Galery</a>
+                              <a class="nav-link" href="gallery.html"><i class="fas fa-camera"></i> Gallery</a>
                             </li>
                             <li class="nav-item">
                               <a class="nav-link" href="placement.html"><i class="fa-sharp fa-solid fa-graduation-cap"></i> Placement</a>
@@ -328,8 +328,8 @@
               <ul class="list-unstyled quick-links">
                   <li><a href="index.html"><i class="fa fa-angle-double-right"></i>Home</a></li>
                   <li><a href="about.html"><i class="fa fa-angle-double-right"></i>About</a></li>
-                  <li><a href="https://www.youth4work.com/onlinetalenttest"><i class="fa fa-angle-double-right"></i>Youth4Work</a></li>
-                  <li><a href="https://www.fiverr.com/share/qb8D02"><i class="fa fa-angle-double-right"></i>Get Started</a></li>
+                  <li><a href="https://jutranchi.ac.in/"><i class="fa fa-angle-double-right"></i>JUT, RANCHI</a></li>
+                  <li><a href="https://jceceb.jharkhand.gov.in/"><i class="fa fa-angle-double-right"></i>JCECEB</a></li>
                   <li><a href="galery.html"><i class="fa fa-angle-double-right"></i>Videos</a></li>
               </ul>
           </div>
@@ -340,8 +340,7 @@
                   <li><a href="https://jutranchi.ac.in/?page_id=221"><i class="fa fa-angle-double-right"></i>JUT SYLLABUS</a></li>
                   <li><a href="https://ekalyan.cgg.gov.in/"><i class="fa fa-angle-double-right"></i>E-KALYAN SCHOLARSHIP</a></li>
                   <li><a href="https://scholarships.gov.in/"><i class="fa fa-angle-double-right"></i>NATIONAL SCHOLARSHIP PORTAL</a></li>
-                  <li><a href="https://jutranchi.ac.in/"><i class="fa fa-angle-double-right"></i>JUT, RANCHI</a></li>
-                  <li><a href="https://jceceb.jharkhand.gov.in/"><i class="fa fa-angle-double-right"></i>JCECEB</a></li>
+                  <li><a href="https://www.youth4work.com/onlinetalenttest"><i class="fa fa-angle-double-right"></i>Youth4Work</a></li>                  
               </ul>
           </div>
           <div class="col-xs-12 col-sm-4 col-md-4">
@@ -352,25 +351,6 @@
              </div>
           </div>
       </div>
-      <!-- <div class="row">
-          <div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-5">
-              <ul class="list-unstyled list-inline social text-center">
-                  <li class="list-inline-item"><a href="https://www.fiverr.com/share/qb8D02"><i class="fa fa-facebook"></i></a></li>
-                  <li class="list-inline-item"><a href="https://www.fiverr.com/share/qb8D02"><i class="fa fa-twitter"></i></a></li>
-                  <li class="list-inline-item"><a href="https://www.fiverr.com/share/qb8D02"><i class="fa fa-instagram"></i></a></li>
-                  <li class="list-inline-item"><a href="https://www.fiverr.com/share/qb8D02"><i class="fa fa-google-plus"></i></a></li>
-                  <li class="list-inline-item"><a href="https://www.fiverr.com/share/qb8D02" target="_blank"><i class="fa fa-envelope"></i></a></li>
-              </ul>
-          </div>
-          <hr>
-      </div>	
-      <div class="row">
-          <div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-2 texen ml-2" t-center text-white">
-              <p><u><a href="https://www.nationaltransaction.com/">National Transaction Corporation</a></u> is a Registered MSP/ISO of Elavon, Inc. Georgia [a wholly owned subsidiary of U.S. Bancorp, Minneapolis, MN]</p>
-              <p class="h6">© All right Reversed.<a class="text-grehref="https://www.sunlimetech.com" target="_blank">Sunlimetech</a></p>
-          </div>
-          <hr>
-      </div>	 -->
   </div>
 </section>
 <!-- ./Footer -->
