--- a/placement.html
+++ b/placement.html
@@ -17,17 +17,13 @@
     integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-
+  <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Pacifico&display=swap" rel="stylesheet">
   <style type="text/css">
     .heading-placement {
-      box-shadow: 5px 15px 30px rgba(0, 0, 0, 0.3), 5px 11px 8px rgba(0, 0, 0, 0.22);
+      
       width: 100%;
       box-sizing: border-box;
-      border-bottom: 4px solid rgb(7, 146, 128);
       text-align: center;
-      border-top: 1px solid rgba(0, 0, 0, 0.3);
-      border-left: 1px solid rgba(0, 0, 0, 0.3);
-      border-right: 1px solid rgba(0, 0, 0, 0.3);
       border-radius: 10px;
     }
 
@@ -254,6 +250,9 @@
       <div class="heading-placement">
         <h1>PLACEMENTS IN GWP-JAMSHEDPUR</h1>
       </div>
+      <div class="col-md-12">
+        <img src="1  (1).gif" class="img-fluid">
+      </div>
       <div class="row">
         <div class="col-5">
           <h3>Training and Placement Office:</h3>
@@ -281,16 +280,16 @@
         <div class="col-3">
           <h5>Our Training Partner</h5>
           <div class="amu">
-            <a href="#">AMU : IDTR, Govt. Of Jharkhand, Jamshedpur.</a><br /><br />
-            <a href="#">AMU : Auto Cluster, Adityapur</a>
+            <a href="https://www.idtr.gov.in/" target="_blank" >AMU : IDTR, Govt. Of Jharkhand, Jamshedpur.</a><br /><br />
+            <a href="http://www.autoclusteradityapur.com/" target="_blank" >AMU : Auto Cluster, Adityapur</a>
           </div>
         </div>
       </div>
     </div>
   </section>
-  <div class="col-md-12">
-    <img src="./image/1  (1).gif" class="img-fluid">
-  </div>
+  <!-- <div class="col-md-12">
+    <img src="1  (1).gif" class="img-fluid">
+  </div> -->
   <section class="placement-cell">
     <h4 style="margin: 0 50px;">Training and Placement Cell:
     </h4>
@@ -354,112 +353,56 @@
     <div class="container">
       <h1>Placement [2022]</h1>
       <div class="image-container">
-        <div class="image"><img class="power" src="./image/1  (64).jpg" alt=""></div>
-        <div class="image"><img class="power" src="./image/1  (65).jpg" alt=""></div>
-        <div class="image"><img src="./image/1  (66).jpg" alt=""></div>
+        <div class="image"><img class="power" src="1  (64).jpg" alt=""></div>
+        <div class="image"><img class="power" src="1  (65).jpg" alt=""></div>
+        <div class="image"><img src="1  (66).jpg" alt=""></div>
       </div>
       <div class="popup-image">
         <span>&times;</span>
-        <img src="./image/1  (64).jpg" alt="">
+        <img src="1  (64).jpg" alt="">
       </div>
     </div>
   </section>
-  <section id="footer">
-    <div class="container">
+  <!-- footer starts -->
+<section id="footer">
+  <div class="container">
       <div class="row text-center text-xs-center text-sm-left text-md-left">
-        <div class="col-xs-12 col-sm-4 col-md-4">
-          <h5>| Quick links</h5>
-          <ul class="list-unstyled quick-links">
-            <li><a href="index.html"><i class="fa fa-angle-double-right"></i>Home</a></li>
-            <li><a href="about.html"><i class="fa fa-angle-double-right"></i>About</a></li>
-            <li><a href="https://www.fiverr.com/share/qb8D02"><i class="fa fa-angle-double-right"></i>FAQ</a></li>
-            <li><a href="https://www.fiverr.com/share/qb8D02"><i class="fa fa-angle-double-right"></i>Get Started</a>
-            </li>
-            <li><a href="galery.html"><i class="fa fa-angle-double-right"></i>Videos</a></li>
-          </ul>
-        </div>
-        <div class="col-xs-12 col-sm-4 col-md-4">
-          <h5> <b>|</b> Important Links</h5>
-          <ul class="list-unstyled quick-links">
-            <li><a href="https://www.jharkhand.gov.in/"><i class="fa fa-angle-double-right"></i>Govt. of Jharkhand</a>
-            </li>
-            <li><a href="https://jutranchi.ac.in/?page_id=221"><i class="fa fa-angle-double-right"></i>JUT SYLLABUS</a>
-            </li>
-            <li><a href="https://ekalyan.cgg.gov.in/"><i class="fa fa-angle-double-right"></i>E-KALYAN SCHOLARSHIP</a>
-            </li>
-            <li><a href="https://scholarships.gov.in/"><i class="fa fa-angle-double-right"></i>NATIONAL SCHOLARSHIP
-                PORTAL</a></li>
-            <li><a href="https://jutranchi.ac.in/"><i class="fa fa-angle-double-right"></i>JUT, RANCHI</a></li>
-            <li><a href="https://jceceb.jharkhand.gov.in/"><i class="fa fa-angle-double-right"></i>JCECEB</a></li>
-          </ul>
-        </div>
-        <div class="col-xs-12 col-sm-4 col-md-4">
-          <h5>| Quick links</h5>
-          <ul class="list-unstyled quick-links">
-            <li><a href="https://www.fiverr.com/share/qb8D02"><i class="fa fa-angle-double-right"></i>Home</a></li>
-            <li><a href="https://www.fiverr.com/share/qb8D02"><i class="fa fa-angle-double-right"></i>About</a></li>
-            <li><a href="https://www.fiverr.com/share/qb8D02"><i class="fa fa-angle-double-right"></i>FAQ</a></li>
-            <li><a href="https://www.fiverr.com/share/qb8D02"><i class="fa fa-angle-double-right"></i>Get Started</a>
-            </li>
-            <li><a href="https://wwwe.sunlimetech.com" title="Design and developed by"><i
-                  class="fa fa-angle-double-right"></i>Imprint</a></li>
-          </ul>
-        </div>
+          <div class="col-xs-12 col-sm-4 col-md-4">
+              <h5>  &nbsp; Quick links</h5>
+              <ul class="list-unstyled quick-links">
+                  <li><a href="index.html" target="_blank" ><i class="fa fa-angle-double-right"></i>Home</a></li>
+                  <li><a href="about.html" target="_blank" ><i class="fa fa-angle-double-right"></i>About</a></li>
+                  <li><a href="https://jutranchi.ac.in/" target="_blank" ><i class="fa fa-angle-double-right"></i>JUT, RANCHI</a></li>
+                  <li><a href="https://jceceb.jharkhand.gov.in/" target="_blank" ><i class="fa fa-angle-double-right"></i>JCECEB</a></li>
+                  <li><a href="gallery.html" target="_blank" ><i class="fa fa-angle-double-right"></i>Videos</a></li>
+              </ul>
+          </div>
+          <div class="col-xs-12 col-sm-4 col-md-4">
+              <h5> &nbsp; Important Links</h5>
+              <ul class="list-unstyled quick-links">
+                  <li><a href="https://www.jharkhand.gov.in/" target="_blank" ><i class="fa fa-angle-double-right"></i>Govt. of Jharkhand</a></li>
+                  <li><a href="https://jutranchi.ac.in/?page_id=221" target="_blank" ><i class="fa fa-angle-double-right"></i>JUT SYLLABUS</a></li>
+                  <li><a href="https://ekalyan.cgg.gov.in/" target="_blank" ><i class="fa fa-angle-double-right"></i>E-KALYAN SCHOLARSHIP</a></li>
+                  <li><a href="https://scholarships.gov.in/" target="_blank" ><i class="fa fa-angle-double-right"></i>NATIONAL SCHOLARSHIP PORTAL</a></li>                   
+              </ul>
+          </div>
+          <div class="col-xs-12 col-sm-4 col-md-4">
+             <div class="map-box">
+              <div class="map-card">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14709.260601901009!2d86.081805!3d22.827827!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xf5311d7156b30d21!2sGovt.%20Women&#39;s%20Polytechnic%2C%20Jamshedpur!5e0!3m2!1sen!2sin!4v1671839258765!5m2!1sen!2sin" width="100%"  style="border:2px solid gray;" allowfullscreen="" loading="fast" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              </div>
+             </div>
+          </div>
       </div>
-      <!-- <div class="row">
-                <div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-5">
-                    <ul class="list-unstyled list-inline social text-center">
-                        <li class="list-inline-item"><a href="https://www.fiverr.com/share/qb8D02"><i class="fa fa-facebook"></i></a></li>
-                        <li class="list-inline-item"><a href="https://www.fiverr.com/share/qb8D02"><i class="fa fa-twitter"></i></a></li>
-                        <li class="list-inline-item"><a href="https://www.fiverr.com/share/qb8D02"><i class="fa fa-instagram"></i></a></li>
-                        <li class="list-inline-item"><a href="https://www.fiverr.com/share/qb8D02"><i class="fa fa-google-plus"></i></a></li>
-                        <li class="list-inline-item"><a href="https://www.fiverr.com/share/qb8D02" target="_blank"><i class="fa fa-envelope"></i></a></li>
-                    </ul>
-                </div>
-                <hr>
-            </div>	 -->
-      <!-- <div class="row">
-                <div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-2 text-center text-white">
-                    <p><u><a href="https://www.nationaltransaction.com/">National Transaction Corporation</a></u> is a Registered MSP/ISO of Elavon, Inc. Georgia [a wholly owned subsidiary of U.S. Bancorp, Minneapolis, MN]</p>
-                    <p class="h6">© All right Reversed.<a class="text-green ml-2" href="https://www.sunlimetech.com" target="_blank">Sunlimetech</a></p>
-                </div>
-                <hr>
-            </div>	 -->
-    </div>
-  </section>
-  <!-- ./Footer -->
-
-  <!-- Optional JavaScript; choose one of the two! -->
-
-  <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
-  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
-    crossorigin="anonymous"></script>
-
-  <!-- Option 2: Separate Popper and Bootstrap JS -->
-  <!--
-        <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
-        -->
-  <script>
-    document.querySelectorAll('.image-container img').forEach(image => {
-      image.onclick = () => {
-        document.querySelector('.popup-image').style.display = 'block';
-        document.querySelector('.popup-image img').src = image.getAttribute('src');
-      }
-    })
-    document.querySelector('.popup-image span').onclick = () => {
-      document.querySelector('.popup-image').style.display = 'none';
-    }
-  </script>
-  <script src="wow.min.js"></script>
-  <script>
-    new WOW().init();
-  </script>
-</body>
-
+  </div>
+</section>
+<!-- ./Footer -->
+     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
+       
+    <script src="wow.min.js"></script>
+    <script>
+        new WOW().init();
+       </script>
+  </body>
 </html>
