--- a/cs.html
+++ b/cs.html
@@ -143,8 +143,8 @@
           <div class="cardd white">
             <h3><strong>Departments</strong></h3>
             <p class="p123"><a href="department.html">Machanical</a></p>
-            <p class="p123"><a href="#">Electronics</a></p>
-            <p class="p123"><a href="cs.html">Computer Science</a></p>
+            <p class="p123"><a href="ece.html">Electronics</a></p>
+            <p class="p123"><a href="#">Computer Science</a></p>
             <p class="p123"><a href="architech.html">Architechture</a></p>
             <!-- <div class="col-md-12 syllabus ">
               <h3><strong>Syllabus</strong></h3>
@@ -162,60 +162,47 @@
   <div id="container">
     <button id="skew"><a href="https://en.wikipedia.org/wiki/Computer_science" target="_blank">Read More</a></button>
   </div>
-  <!-- footer starts -->
-  <section id="footer">
-    <div class="container">
+ <!-- footer starts -->
+<section id="footer">
+  <div class="container">
       <div class="row text-center text-xs-center text-sm-left text-md-left">
-        <div class="col-xs-12 col-sm-4 col-md-4">
-          <h5> &nbsp; Quick links</h5>
-          <ul class="list-unstyled quick-links">
-            <li><a href="index.html"><i class="fa fa-angle-double-right"></i>Home</a></li>
-            <li><a href="about.html"><i class="fa fa-angle-double-right"></i>About</a></li>
-            <li><a href="https://jutranchi.ac.in/"><i class="fa fa-angle-double-right"></i>JUT, RANCHI</a></li>
-            <li><a href="https://jceceb.jharkhand.gov.in/"><i class="fa fa-angle-double-right"></i>JCECEB</a></li>
-            <li><a href="galery.html"><i class="fa fa-angle-double-right"></i>Videos</a></li>
-          </ul>
-        </div>
-        <div class="col-xs-12 col-sm-4 col-md-4">
-          <h5> &nbsp; Important Links</h5>
-          <ul class="list-unstyled quick-links">
-            <li><a href="https://www.jharkhand.gov.in/"><i class="fa fa-angle-double-right"></i>Govt. of Jharkhand</a>
-            </li>
-            <li><a href="https://jutranchi.ac.in/?page_id=221"><i class="fa fa-angle-double-right"></i>JUT SYLLABUS</a>
-            </li>
-            <li><a href="https://ekalyan.cgg.gov.in/"><i class="fa fa-angle-double-right"></i>E-KALYAN SCHOLARSHIP</a>
-            </li>
-            <li><a href="https://scholarships.gov.in/"><i class="fa fa-angle-double-right"></i>NATIONAL SCHOLARSHIP
-                PORTAL</a></li>
-            <li><a href="https://www.youth4work.com/onlinetalenttest"><i class="fa fa-angle-double-right"></i>Youth4Work</a></li>
-
-          </ul>
-        </div>
-        <div class="col-xs-12 col-sm-4 col-md-4">
-          <div class="map-box">
-            <div class="map-card">
-              <iframe
-                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14709.260601901009!2d86.081805!3d22.827827!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xf5311d7156b30d21!2sGovt.%20Women&#39;s%20Polytechnic%2C%20Jamshedpur!5e0!3m2!1sen!2sin!4v1671839258765!5m2!1sen!2sin"
-                width="100%" height="150%" style="border:0;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </div>
+          <div class="col-xs-12 col-sm-4 col-md-4">
+              <h5>  &nbsp; Quick links</h5>
+              <ul class="list-unstyled quick-links">
+                  <li><a href="index.html"><i class="fa fa-angle-double-right"></i>Home</a></li>
+                  <li><a href="about.html"><i class="fa fa-angle-double-right"></i>About</a></li>
+                  <li><a href="https://jutranchi.ac.in/"><i class="fa fa-angle-double-right"></i>JUT, RANCHI</a></li>
+                  <li><a href="https://jceceb.jharkhand.gov.in/"><i class="fa fa-angle-double-right"></i>JCECEB</a></li>
+                  <li><a href="galery.html"><i class="fa fa-angle-double-right"></i>Videos</a></li>
+              </ul>
           </div>
-        </div>
+          <div class="col-xs-12 col-sm-4 col-md-4">
+              <h5> &nbsp; Important Links</h5>
+              <ul class="list-unstyled quick-links">
+                  <li><a href="https://www.jharkhand.gov.in/"><i class="fa fa-angle-double-right"></i>Govt. of Jharkhand</a></li>
+                  <li><a href="https://jutranchi.ac.in/?page_id=221"><i class="fa fa-angle-double-right"></i>JUT SYLLABUS</a></li>
+                  <li><a href="https://ekalyan.cgg.gov.in/"><i class="fa fa-angle-double-right"></i>E-KALYAN SCHOLARSHIP</a></li>
+                  <li><a href="https://scholarships.gov.in/"><i class="fa fa-angle-double-right"></i>NATIONAL SCHOLARSHIP PORTAL</a></li>
+                  <li><a href="https://www.youth4work.com/onlinetalenttest"><i class="fa fa-angle-double-right"></i>Youth4Work</a></li>                  
+              </ul>
+          </div>
+          <div class="col-xs-12 col-sm-4 col-md-4">
+             <div class="map-box">
+              <div class="map-card">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14709.260601901009!2d86.081805!3d22.827827!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xf5311d7156b30d21!2sGovt.%20Women&#39;s%20Polytechnic%2C%20Jamshedpur!5e0!3m2!1sen!2sin!4v1671839258765!5m2!1sen!2sin" width="100%" height="150%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              </div>
+             </div>
+          </div>
       </div>
-    </div>
-  </section>
-  <!-- ./Footer -->
-  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
-    crossorigin="anonymous"></script>
-
-  <script src="wow.min.js"></script>
-  <script>
-    new WOW().init();
-  </script>
-</body>
-
+  </div>
+</section>
+<!-- ./Footer -->
+     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
+       
+    <script src="wow.min.js"></script>
+    <script>
+        new WOW().init();
+       </script>
+  </body>
 </html>
