--- a/notice.html
+++ b/notice.html
@@ -15,13 +15,12 @@
     <link rel="stylesheet" type="text/css" href="noticestyle.css" />
     <link rel="stylesheet" type="text/css" href="animate.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
-        integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+        integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Pacifico&display=swap" rel="stylesheet">
-
+    
 </head>
 
 <body>
@@ -67,7 +66,7 @@
 
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav mr-auto">
-                                <li class="nav-item active">
+                                <li class="nav-item">
                                     <a class="nav-link" href="index.html"><i class="fa-solid fa-house-chimney"></i> Home
                                         <span class="sr-only">(current)</span></a>
                                 </li>
@@ -93,7 +92,7 @@
                                     <a class="nav-link" href="notice.html"><i class="fa-solid fa-file-pdf"></i>
                                         Addmission</a>
                                 </li>
-                                <li class="nav-item">
+                                <li class="nav-item  active">
                                     <a class="nav-link" href="notice.html"><i class="fa-solid fa-file-pdf"></i>
                                         Notice</a>
                                 </li>
@@ -108,6 +107,14 @@
             </div>
         </div>
     </section>
+    <!--  -->
+    <div class="contaioner text-center">
+        <div class="row">
+            <div class="col">
+                <h1 class="animate__animated animate__fadeInUp">NOTICES</h1>
+            </div>
+        </div>
+    </div>
     <!--  -->
     <div class="container">
         <div class="row noticeborder">
